navigation layout fix, also fixed the width overflow on the homepage

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -3,12 +3,6 @@
   padding: 0;
 }
 
-html,
-body {
-  width: 100%;
-  height: 100%;
-}
-
 body {
   font-family: Poppins, sans-serif;
 }
